--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,10 +3,10 @@ name: Build and Tests
 on:
   push:
     branches: 
-    - main
+    - master
   pull_request:
     branches:
-    - main
+    - master
   schedule:   
     - cron: '0 12 * * *'
 
